group 'io.tafl'
version '0.1'

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {

    compile 'org.projectlombok:lombok:1.18.6'
    annotationProcessor 'org.projectlombok:lombok:1.18.6'

    testCompile group: 'junit', name: 'junit', version: '4.11'
}
